se agrego cositas

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "form-send-whatapp",
+  "name": "landing_page_colegio_bartolome",
   "private": true,
   "version": "0.0.0",
   "type": "module",
