--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@tabler/icons-react": "^2.47.0",
+    "@types/facebook-js-sdk": "^3.3.10",
+    "facebook-js-sdk": "^0.3.4",
     "framer-motion": "^11.0.3",
     "fslightbox-react": "^1.7.6",
     "lightbox.js-react": "^1.0.0",
@@ -18,6 +20,7 @@
     "react-dom": "^18.2.0",
     "react-photo-album": "^2.3.1",
     "react-router-dom": "^6.20.1",
+    "react-social-media-embed": "^2.5.9",
     "tailwindcss-animated": "^1.0.1",
     "yet-another-react-lightbox": "^3.17.0"
   },
